@@ -9,8 +9,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday mkstemp pathmax regex restrict save-cwd stdbool strcase timespec vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday mkstemp pathmax regex restrict save-cwd stdbool strcase timespec unlocked-io vasnprintf xalloc xgetcwd xsize
 
 AUTOMAKE_OPTIONS = 1.8 gnits
 
@@ -116,6 +116,8 @@ MOSTLYCLEANFILES += stdbool.h stdbool.h-t
 libgnu_a_SOURCES += strcase.h
 
 libgnu_a_SOURCES += timespec.h
+
+libgnu_a_SOURCES += unlocked-io.h
 
 libgnu_a_SOURCES += printf-args.h printf-parse.h vasnprintf.h
 
